--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server",
-    "build": "rm -rf build & webpack --config webpack.config.js"
+    "dev": "webpack-dev-server --inline --progress",
+    "build": "rm -rf dist & node build/build.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "ora": "^3.4.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^1.4.1",
