--- a/package.json
+++ b/package.json
@@ -11,8 +11,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
     "autoprefixer": "^9.6.1",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "eslint": "^6.2.1",
+    "eslint-loader": "^2.2.1",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.2",
     "less-loader": "^5.0.0",
@@ -22,7 +30,6 @@
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^1.4.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
