--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "css-loader": "^3.2.0",
     "eslint": "^6.2.1",
     "eslint-loader": "^2.2.1",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "html-withimg-loader": "^0.1.16",
+    "jquery": "^3.4.1",
     "less": "^3.10.2",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
@@ -30,8 +33,10 @@
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^1.4.1",
+    "url-loader": "^2.1.0",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7",
     "webpack-dev-server": "^3.8.0"
-  }
+  },
+  "dependencies": {}
 }
