--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/runtime": "^7.5.5",
     "autoprefixer": "^9.6.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "eslint": "^6.2.1",
+    "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.2.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
