--- a/package.json
+++ b/package.json
@@ -42,5 +42,7 @@
     "webpack-dev-server": "^3.8.0",
     "webpack-merge": "^4.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "axios": "^0.19.0"
+  }
 }
